unpackaged/main/default/objects/Attendance__c/fields/Workout_Class__c.field-meta.xml
<CustomField>
    <fullName>Workout_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workout Class</label>
    <referenceTo>Workout_Class__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>